[package]
name = "elsa-cli"
version = "0.2.0"
edition = "2021"
authors = ["interrrp"]
description = "A CLI tool to list items in a directory."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/interrrp/elsa"
repository = "https://github.com/interrrp/elsa"
keywords = ["ls", "list", "directory", "folder", "dir"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
owo-colors = "3.5.0"
shellexpand = "3.1.0"

[[bin]]
name = "elsa"
path = "src/main.rs"
